service.yml
kind: Service
apiVersion: v1
metadata:
  name: opc-server-3dpr
spec:
  selector:
    app: opc-server-3dpr
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
    - protocol: TCP
      port: 26543
      targetPort: 26543
      name: opc
