ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opc-server-3dpr
  namespace: webinar
  labels:
    name: opc-server-3dpr
spec:
  ingressClassName: nginx
  rules:
    - host: zay-shop.shatohin.space
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: opc-server-3dpr
                port:
                  number: 3000
